# fedapt

./: .env.example  .gitignore  0_collection.ipynb  1_curation.ipynb  2_federated_dapt.ipynb  3_instruction_tuning.ipynb  4_run_benchmarks.ipynb  5_analysis.ipynb  DESIGN.md  README.md  RUNBOOK.md  paper_draft.tex  pyproject.toml
legacy/: 1_curation.ipynb  2_federated_dapt.ipynb  3_instruction_tuning.ipynb  4_run_benchmarks.ipynb
notebooks/: 00_build_data.ipynb  01_federated_dapt.ipynb  02_task_tuning.ipynb  03_evaluate.ipynb  04_analysis.ipynb
scripts/: analyze.py  build_data.py  evaluate.py  fetch_vendor_rss.py  train.py
src/fedapt/: __init__.py  aggregators.py  analysis.py  attacks.py  clients.py  config.py  corpus.py  dp.py  eval_metrics.py  evaluate.py  federated.py  judge.py  model.py  splits.py  tasks.py  train_tasks.py  vendor_feeds.py
tests/: test_analysis.py  test_data_layer.py  test_dp_benign.py  test_train_eval.py  test_vendor_feeds.py
